// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a forbidClick toast 1`] = `
<div class="buri-toast buri-toast--middle buri-toast--success" style="z-index: 2001;" name="buri-fade"><i class="buri-icon buri-icon-success buri-toast__icon">
    <!----></i></div>
`;

exports[`icon prop 1`] = `
<div class="buri-toast buri-toast--middle" style="z-index: 2005;" name="buri-fade"><i class="buri-icon buri-icon-star-o buri-toast__icon">
    <!----></i>
  <div class="buri-toast__text">Message</div>
</div>
`;

exports[`icon-prefix prop 1`] = `
<div class="buri-toast buri-toast--middle" style="z-index: 2006;" name="buri-fade"><i class="my-icon my-icon-star-o buri-toast__icon">
    <!----></i>
  <div class="buri-toast__text">Message</div>
</div>
`;

exports[`show html toast 1`] = `
<div class="buri-toast buri-toast--middle buri-toast--html" style="z-index: 2004;" name="buri-fade">
  <div class="buri-toast__text">
    <div>Message</div>
  </div>
</div>
`;

exports[`show loading toast 1`] = `
<div class="buri-toast buri-toast--middle buri-toast--loading" style="z-index: 2003;" name="buri-fade">
  <div class="buri-loading buri-loading--circular buri-toast__loading"><span class="buri-loading__spinner buri-loading__spinner--circular"><svg viewBox="25 25 50 50" class="buri-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div>
  <div class="buri-toast__text">Message</div>
</div>
`;
